# ReactRustWebApp

./: .gitignore  TE.docx  docker-compose.yml  package-lock.json
backend-server/: .env  .gitignore  Cargo.toml  setup.sh  user.db
backend-server/migrations/2023-05-03-201442_backend_db/: down.sql  up.sql
backend-server/migrations/2023-05-12-104322_create_users/: up.sql
backend-server/migrations/2023-05-12-143931_create_users/: up.sql
backend-server/migrations/2023-05-18-163944_create_users/: up.sql
backend-server/src/: auth_handler.rs  main.rs  models.rs  register_handler.rs  schema.rs  utils.rs
backend-server/src/app/: mod.rs  models.rs  services.rs
backend-server/src/todoList/: mod.rs  models.rs  services.rs
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.css  App.js  index.css
client/src/Components/About/: About.jsx
client/src/Components/AboutUs/: AboutUs.jsx  AboutUs.module.css  AboutUs.modules.css
client/src/Components/Login/: Login.jsx
client/src/Components/NavBar/: NavBar.jsx  NavBar.module.css
client/src/Components/Navigation/: Navigation.jsx  Navigation.module.css
client/src/Components/OurTeam/: OurTeam.jsx  OurTeam.modules.css
client/src/Components/Profile/: Profile.jsx  Profile.module.css
client/src/Components/Sport/: Sport.jsx  Sport.module.css
client/src/Components/Sport/Slider/: Slider.jsx  (+1 more)
client/src/Components/Team/: Team.jsx  Team.module.css
client/src/Components/Training/: Training.jsx  Training.module.css
client/src/api/: api.js
client/src/img/: AboutMainBacground.png~
