[package]
name = "backend-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version="2.0.3",features = ["postgres"]}
dotenv = "0.15.0"
actix-web = "4.3.1"
serde = {version = "1.0.160", features = ["derive"]}
r2d2 = "0.8.10"
